--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 * {
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
   background-color: black;
 }
+
 .layout {
   height: 100vh;
   max-width: 500px;
